--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header class="header">
     <div class="header-items">
       <div class="brand">
-        <img class="logo" src="" alt="logo" />
+        <img class="logo" src="images/logo.jpg" alt="logo" />
       <p class="brand-name">
         WheelsOfHope
       </p>
@@ -20,7 +20,7 @@
   </div>
 
 </header>
-<section class="intro">
+<section id="intro-container" class="intro">
   <div class="intro-text">
     <h1 class="bold-heading">Improving Lives,
       Fostering Diginity
@@ -28,6 +28,7 @@
     <p class="sub-text">
       Advocating for empowerment, dignity, and care for vulnerable individuals affected by gender-based violence, vulnerable children, and the elderly, fostering a society of inclusivity and respect."
     </p>
+    <button class="btn btn-dark" type="submit">Learn more</button>
   </div>
 
   <div class="images">
@@ -67,34 +68,25 @@
 <section class="video">
 
 </section>
-
-<section class="aboutUs">
-  <div class="Card">
-    <div class="pImg">
-
-    </div>
-    <p>
-      learn more about us
-    </p>
-    <button class="button">Learn More
-    </button>
-  </div>
-
-  <div class="Card">
-    <div class="pImg">
-
-    </div>
-    <p>
-      Get in touch with us via different platforms
-    </p>
-    <button class="button">contact Us</button>
-  </div>
-</section>
+<div class="contact-us">
+  <p>
+    to  learn more about
+    us
+  </p>
+  <button class="button btn" type="submit">Contact Us</button>
+</div>
 </main>
 <footer>
-<p>
-@WheelsOfHope
-</p>
+<ul class="listOne">
+<li><a>about Us</a></li>
+<li><a href="#">contact Us</a></li>
+<li><a href="#">developers</a></li>
+</ul>
+<ul class="listTwo">
+<li class=""><a href="#">Get involved</a></li>
+<li><a href="#">survivors page</a></li>
+<li><a href="#">News</a></li>
+</ul>
 </footer>
 </body>
 </html>
