--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <main>
   <section class="core-values">
-    <h1>What we do </h1>
+    <h1 class="heading">What we do </h1>
     <div class="point">
       <h2>protection and Prevention:</h2>
       <p>
@@ -70,8 +70,7 @@
 </section>
 <div class="contact-us">
   <p>
-    to  learn more about
-    us
+    contact Us
   </p>
   <button class="button btn" type="submit">Contact Us</button>
 </div>
