--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <link rel="stylesheet" href="css/index.css">
   <script src="js/index.js"></script>
   <title>WheelsOfHope</title>
+  <style type="text/css" media="all">
+    @import 'css/layout.css'
+  </style>
 </head>
 <body>
   <header class="header">
@@ -15,10 +18,11 @@
       <p class="brand-name">
         WheelsOfHope
       </p>
+
     </div>
 
   </div>
-
+  <i id="menuBtn" class="open"></i>
 </header>
 <section id="intro-container" class="intro">
   <div class="intro-text">
@@ -72,13 +76,13 @@
   <p>
     contact Us
   </p>
-  <button class="button btn" type="submit">Contact Us</button>
+  <a class="button btn" href="contact.html">Contact Us</a>
 </div>
 </main>
 <footer>
 <ul class="listOne">
 <li><a>about Us</a></li>
-<li><a href="#">contact Us</a></li>
+<li><a href="contact.html">contact Us</a></li>
 <li><a href="#">developers</a></li>
 </ul>
 <ul class="listTwo">
