--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/index.css">
-  <script src="js/index.js"></script>
+
   <title>WheelsOfHope</title>
   <style type="text/css" media="all">
     @import 'css/layout.css'
@@ -20,9 +20,19 @@
       </p>
 
     </div>
-
+    <i id="menuBtn"class="menuBtn ">Menu</i>
   </div>
-  <i id="menuBtn" class="open"></i>
+
+  <nav class="hide">
+    <div class="nav-item">
+      <a href="">survivors page</a>
+
+    </div>
+    <div class="nav-item">
+      <a href="">about us</a>
+
+    </div>
+  </nav>
 </header>
 <section id="intro-container" class="intro">
   <div class="intro-text">
@@ -91,5 +101,6 @@
 <li><a href="#">News</a></li>
 </ul>
 </footer>
+<script src="js/index.js" defer></script>
 </body>
 </html>
